# eclipse

./: .gitignore  .gitmodules  .tool-versions  2019-12.bazelproject  2022-12.bazelproject  2024-03.bazelproject  BUILD.bazel  CHANGELOG.md  MODULE.bazel  Makefile  README.md  bazel-bin  bazel-eclipse  bazel-out  bazel-testlogs  create_release_zip.py  generate_eclipse_site.py  test.txt
.github/workflows/: ci.yml  release.yml
dist5/: MANIFEST.MF  site.xml
docs/: development.md  site.xml
docs/cody-update-site/: site.xml
eclipse-platforms/: .gitignore  BUILD.bazel  eclipse-2019-12-jars  eclipse-2022-12-jars  eclipse-2024-03-jars
meta/: p2repo.bzl
plugins/: BUILD
plugins/cody-chat/: .classpath  .project  BUILD.bazel  build.properties  cody-commit.txt  plugin.xml  version.txt
plugins/cody-chat.ui-tests/: AllTests.launch  BUILD.bazel
plugins/cody-chat.ui-tests/src/com/sourcegraph/cody/testing/: ChatViewTests.java
plugins/cody-chat/resources/: cody-index.html  index.html  injected-script.js  injected-styles.css
plugins/cody-chat/schema/: com.sourcegraph.cody.messageHandler.exsd
plugins/cody-chat/src/com/sourcegraph/cody/: CodyActivator.java  CodyAgent.java  CodyAgentClient.java  CodyAgentClientImpl.java  CodyAgentServer.java  CodyChatActivator.java  CodyPaths.java  CodyResources.java  CodyStartup.java  DebugWorkspaceListener.java  MessageOnlyException.java  ResourcePath.java  StartAgentJob.java  WebviewServer.java  WorkspaceListener.java  WrappedRuntimeException.java
plugins/cody-chat/src/com/sourcegraph/cody/chat/: ChatView.java  DisableableBrowser.java  StaticFileServer.java
plugins/cody-chat/src/com/sourcegraph/cody/chat/access/: AddProfileAction.java  LogInJob.java  NewTokenDialog.java  TokenSelectionView.java  TokenStorage.java  WaitingForLoginWindow.java
plugins/cody-chat/src/com/sourcegraph/cody/chat/agent/: CodyAgent.java  CodyAgentClientImpl.java  CodyManager.java  Disposable.java  MultiConsumer.java  OnFailure.java  ReloadHandler.java  ResourceLister.java  StartAgentJob.java  StartWebserverJob.java
plugins/cody-chat/src/com/sourcegraph/cody/edits/: EditManager.java  FileEdit.java  FileEditManager.java
plugins/cody-chat/src/com/sourcegraph/cody/handlers/: InsertHandler.java  MessageHandler.java  MessageHandlers.java  NewFileHandler.java
plugins/cody-chat/src/com/sourcegraph/cody/logging/: CodyLogger.java  LogContentProvider.java  LogMessage.java  LogView.java
plugins/cody-chat/src/com/sourcegraph/cody/protocol_generated/: ApiVersionId.java  AttributionParams.java  Attribution_SearchParams.java  Attribution_SearchResult.java  AuthMethod.java  AuthStatus.java  AutocompleteItem.java  AutocompleteParams.java  AutocompleteResult.java  BillingMetadataParams.java  CancelParams.java  ChatError.java  ChatExportResult.java  ChatHistory.java  ChatSubmitType.java  Chat_DeleteParams.java  Chat_EditMessageParams.java  Chat_ExportParams.java  Chat_ImportParams.java  Chat_ModelsParams.java  Chat_ModelsResult.java  Chat_RemoteReposParams.java  Chat_RemoteReposResult.java  Chat_RestoreParams.java  Chat_SetModelParams.java  Chat_Sidebar_NewResult.java  Chat_SubmitMessageParams.java  Chat_Web_NewResult.java  ClientCapabilities.java  ClientInfo.java  ClientSideConfig.java  ClientStateForWebview.java  CodeActionTriggerKind.java  CodeActions_ProvideParams.java  CodeActions_ProvideResult.java  CodeActions_TriggerParams.java  CodyAgentClient.java  CodyAgentServer.java  CodyCommand.java  CodyCommandContext.java  (+200 more)
plugins/cody-chat/src/com/sourcegraph/cody/webview_protocol/: AttributionParams.java  AuthMethod.java  ChatHistory.java  ChatSubmitType.java  Chat_EditMessageParams.java  Chat_SubmitMessageParams.java  ClientStateForWebview.java  CodyIDE.java  CodyIDECssVariables.java  ConfigFeaturesParams.java  ConfigParams.java  ContextGroup.java  ContextMentionProviderID.java  ContextMentionProviderMetadata.java  ContextProvider.java  EmbeddingsProvider.java  EnhancedContextContextT.java  ExtensionMessage.java  MentionQuery.java  TelemetryEventProperties.java  UserLocalHistory.java  View.java  WebviewMessage.java  WebviewPostMessageParams.java  WebviewRecordEventParameters.java  Webview_CreateParams.java  Webview_ReceiveMessageParams.java
plugins/cody-chat/src/com/sourcegraph/cody/workspace/: CodyContentListener.java  CodyListener.java  CodySelectionListener.java  EditorState.java  LensDebugHandler.java  ProjectCreationListener.java  WorkbenchListener.java  WorkspaceListener.java
releng/cody-feature/: .project  feature.xml  minimal_run.launch  run_with_java.launch
releng/cody-update-site/: .project  site.xml
scripts/: bazel-project.py  bazel-sources.py  bsp-project.py  build-agent.sh  build-all.sh  build-asset-file.sh  build-java-bindings.sh  build-webview.sh  bump-version.sh  clean.sh  download-eclipse.py  download-node.sh  format.py  generate-bsp-project-for-intellij.sh  push-tag.sh  release.sh
webview/: index.html
