load("@rules_java//java:defs.bzl", "java_library", "java_import")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "cody-eclipse",
    srcs = glob(["plugins/cody-chat/src/**/*.java"]),
  deps = [
            ":eclipse_plugin_jars",
            ":custom_jars",

  ],

)

java_import(
    name = "custom_jars",
    jars = glob(["plugins/cody-chat/lib/*.jar"]),
)

java_import(
    name = "eclipse_plugin_jars",
    jars = glob(["eclipse-plugins/*.jar"]),
)


