load("@rules_java//java:defs.bzl", "java_import")
package(default_visibility = ["//visibility:public"])


java_import(
    name = "eclipse_2024_03",
    jars = glob(["eclipse-2024-03-jars/*.jar"]),
    srcjar = "eclipse-2024-03-jars-sources.jar",
)

java_import(
    name = "eclipse_2022_12",
    jars = glob(["eclipse-2022-12-jars/*.jar"]),
    srcjar = "eclipse-2022-12-jars-sources.jar",
)

java_import(
    name = "eclipse_2019_12",
    jars = glob(["eclipse-2019-12-jars/*.jar"]),
    srcjar = "eclipse-2019-12-jars-sources.jar",
)
